--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cali.so",
+  "name": "lemondy.org",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -57,6 +57,7 @@
     "edge-cors": "^0.2.1",
     "framer-motion": "^10.12.17",
     "hashids": "^2.3.0",
+    "mysql2": "^3.9.2",
     "next": "^13.4.7",
     "next-sanity": "^5.0.2",
     "next-themes": "^0.2.1",
