--- a/.env.example
+++ b/.env.example
@@ -14,7 +14,7 @@ NEXT_PUBLIC_SANITY_USE_CDN="false"
 RESEND_API_KEY=""
 SITE_NOTIFICATION_EMAIL_TO="example@youremail.com"
 NEXT_PUBLIC_SITE_EMAIL_FROM="hi@youremail.com"
-NEXT_PUBLIC_SITE_URL="https://example.com"
+NEXT_PUBLIC_SITE_URL="https://lemondy.org"
 
 # Upstash Redis 必需
 UPSTASH_REDIS_REST_TOKEN=""
