--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ NEXT_PUBLIC_SANITY_USE_CDN="false"
 # Email 通知必需
 RESEND_API_KEY=""
 SITE_NOTIFICATION_EMAIL_TO="example@youremail.com"
-NEXT_PUBLIC_SITE_EMAIL_FROM="hi@youremail.com"
+NEXT_PUBLIC_SITE_EMAIL_FROM="hi@lemondy.org"
 NEXT_PUBLIC_SITE_URL="https://lemondy.org"
 
 # Upstash Redis 必需
